--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -6,7 +6,7 @@ $black: #252c32;
 body {
   font-family: "Outfit", sans-serif;
   background-color: $back-gray;
-  .my-heding {
+  .my-heading {
     margin: 30px 0;
     font-weight: 500;
     color: rgba(0, 0, 0, 0.75);
@@ -128,6 +128,9 @@ body {
     }
     .brand {
       color: rgba(110, 124, 135, 1);
+    }
+    img {
+      height: 400px;
     }
   }
   .favourites-cart {
